<?xml version="1.0"?>
<package>
  <name>testcrcl</name>
  <version>0.0.1</version>
  <description>The crcl_testing package</description>

  <maintainer email="john.michaloski@nist.gov">John Michaloski</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
   <build_depend>nistcrcl</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensormsgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nistcrcl</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensormsgs_msgs</run_depend>


</package>
